# geti-sdk

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Pipfile  README.md  USAGE_EXAMPLES.md  api_reference.html  compose-dev.yaml  contributing.html  contributing_to_the_sdk.html  create_coco_project_detection.py  create_coco_project_pipeline.py  genindex.html  geti.html  geti_sdk.annotation_readers.html  geti_sdk.data_models.html  geti_sdk.demos.html  geti_sdk.deployment.data_models.html  geti_sdk.deployment.html  geti_sdk.http_session.html  geti_sdk.rest_clients.html  geti_sdk.rest_converters.html  geti_sdk.utils.html  getting_started.html  index.html  modules.html  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  requirements-deployment.txt  requirements.txt  sc_api_tools.annotation_readers.html  sc_api_tools.data_models.enums.html  sc_api_tools.data_models.html  (+19 more)
.github/: SECURITY.md  dependabot.yml  labeler.yml  pull_request_template.md  zizmor.yaml
_sources/: geti.rst.txt  geti_sdk.rest_converters.rst.txt  geti_sdk.utils.rst.txt  index.rst.txt  sc_api_tools.annotation_readers.datumaro_annotation_reader.rst.txt  sc_api_tools.annotation_readers.rst.txt  sc_api_tools.deployment.data_models.enums.rst.txt  sc_api_tools.deployment.data_models.rst.txt  sc_api_tools.deployment.rst.txt  sc_api_tools.rest_managers.annotation_manager.rst.txt
_static/: documentation_options.js
docs/: Makefile  requirements.txt
examples/: README.md  create_coco_project_classification.py  create_coco_project_detection.py  create_coco_project_pipeline.py  create_coco_project_segmentation.py  create_coco_project_single_task.py  create_coco_project_task_chain.py  create_demo_projects.py  create_vitens_aeromonas_detection_project.py  create_vitens_aeromonas_project_single_task.py  download_coco.py  migrate_nous_projects.py  migrate_nous_projects_general.py  migrate_nous_projects_local.py  migrate_nous_projects_multilabel.py  predict_and_reconstruct_video.py  predict_video_locally.py  predict_video_on_local.py  upload_and_predict_from_numpy.py  upload_and_predict_media_from_folder.py
geti_sdk/: __init__.py  _version.py  geti.py  platform_versions.py
gh-pages/: modules.html  objects.inv  py-modindex.html  sc_api_tools.data_models.containers.html  sc_api_tools.data_models.enums.html  sc_api_tools.deployment.data_models.enums.html  sc_api_tools.deployment.data_models.html  sc_api_tools.html  sc_api_tools.rest_managers.annotation_manager.html  sc_api_tools.rest_managers.html  searchindex.js
notebooks/: 0001_E2E_demo_SDK_new_production_data.ipynb  001_create_project.ipynb  002_create_project_from_dataset.ipynb  003_upload_and_predict_image.ipynb  004_create_pipeline_project_from_dataset.ipynb  005_deploy_project.ipynb  005_modify_image.ipynb  006_reconfigure_task.ipynb  006_train_project.ipynb  007_train_project.ipynb  008_deploy_project.ipynb  009_deploy_project.ipynb  009_download_and_upload_project.ipynb  010_model_serving.ipynb  011_benchmarking_models.ipynb  011_post_inference_hooks.ipynb  012_manage_models.ipynb  012_model_monitoring.ipynb  012_post_inference_hooks.ipynb  013_asynchronous_inference.ipynb  013_manage_models.ipynb  014_asynchronous_inference.ipynb  102_from_zero_to_hero_9_steps.ipynb  103_upload_and_download_deployment_video-OVNotebook.ipynb  103_upload_and_download_deployment_video.ipynb  103_upload_and_download_deployment_video_Exportable_Code.ipynb  README.md  raw-rest-api.ipynb  (+1 more)
(+967 files in other folders)
